# coreutils

./: README.md  false.py  pyproject.toml  true.py
coreutils/: echo.py  sleep.py  yes.py
tests/: test_echo.py  test_false.py  test_sleep.py  test_true.py  test_yes.py
